使用jdk17解决GUI文字不清晰。